Almost functional now...
Though it seems like the debt calculations are wrong

--- a/less/style.less
+++ b/less/style.less
@@ -190,6 +190,14 @@ i {
     }
 }
 
+.placeholder {
+    .bold;
+    font-size: 150%;
+    padding: 0.50em 1em;
+    color: fade(black, 50%);
+    display: inline-block;
+}
+
 .floaty_container {
     &.no_padding {
         padding: 0px;
@@ -318,8 +326,6 @@ table.summary {
     width: 100%;
 
     border-collapse: collapse;
-
-    margin-top: 10px;
 
     @border_style: solid;
 
