--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -11,4 +11,5 @@
 <script src="js/PaymentForm.js"></script>
 <script src="js/Root.js"></script>
 <script src="js/main.js"></script>
+<link rel="shortcut icon" href="img/favicon.png">
 <link rel="stylesheet" href="css/style.css">
