Minor style tweaks

--- a/less/people.less
+++ b/less/people.less
@@ -19,6 +19,7 @@
             font-weight: bold;
             .round(2px);
             display: inline-block;
+            border: 1px solid fade(black, 5%);
         }
 
         &.true {
