--- a/views/_payments.ejs
+++ b/views/_payments.ejs
@@ -18,7 +18,7 @@
         visible: tempPaymentForm().visible"
         >
         <div class="field">
-            <span class="trivial_word">who</span>
+            <span class="trivial_word">payer</span>
             <select data-bind="
                 options: $root.normalPeople,
                 optionsText: 'name',
@@ -27,7 +27,7 @@
                 "></select>
         </div>
         <div class="field">
-            <span class="trivial_word">whom</span>
+            <span class="trivial_word">payee</span>
             <select data-bind="
                 options: $root.normalPeopleExceptMe,
                 optionsText: 'name',
@@ -36,7 +36,7 @@
                 "></select>
         </div>
         <div class="field">
-            <span class="trivial_word">what</span>
+            <span class="trivial_word">amount</span>
             <input
                 id="price_field"
                 class="price"
@@ -45,7 +45,7 @@
                 >
         </div>
         <div class="field">
-            <span class="trivial_word">when</span>
+            <span class="trivial_word">date</span>
             <div class="date_group">
                 <select data-bind="options: months, value: selectedMonth"></select>
                 <span class="trivial_word">/</span>
