--- a/views/_expenses.ejs
+++ b/views/_expenses.ejs
@@ -71,7 +71,7 @@
         </div>
     </form>
     <div id="expense_group" data-bind="foreach: expenses">
-        <div class="expense_item">
+        <div class="expense_item" data-bind="css: $root.cssClassForExpense($data)">
             <div>
                 <button class="stealth" title="Delete" data-bind="click: $root.deleteExpense.bind(null, id)">
                     <i class="delete icon-remove"></i>
